UAT_Backup_All_8Jan2024_0624/Backup-Source/objects/Phoenix_Contract__c.object
<CustomObject>
    <fields>
        <fullName>Account_Id__c</fullName>
        <formula>CASESAFEID(Phoenix_Customer__r.Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Owner__c</fullName>
        <description>This Field only used for Report</description>
        <formula>Phoenix_Customer__r.Owner.FirstName &amp; &quot; &quot; &amp; Phoenix_Customer__r.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <description>This field only used for Reports</description>
        <formula>TEXT(Phoenix_Customer__r.Type)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Contract_End_Date__c</fullName>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phoenix_Contract_External_Description__c</fullName>
        <label>Contract External Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Phoenix_Contract_Internal_Description__c</fullName>
        <label>Contract Internal Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Phoenix_Contract_Number__c</fullName>
        <label>Contract Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Contract_Start_Date__c</fullName>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phoenix_Contract_Status__c</fullName>
        <formula>IF(ISBLANK(Phoenix_Contract_End_Date__c),&quot;&quot;,IF(Phoenix_Contract_End_Date__c &lt; TODAY(),&quot;Expired&quot;, &quot;Active&quot; ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Contract_Type__c</fullName>
        <label>Contract Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Direct</fullName>
                </value>
                <value>
                    <fullName>Indirect</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Customer_Number__c</fullName>
        <formula>Phoenix_Customer__r.AccountNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_Ignore_for_Best_price__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ignore for Best price Calculation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phoenix_Is_Direct_Customer__c</fullName>
        <formula>Phoenix_Customer__r.Phoenix_Is_Direct_Customer__c</formula>
        <label>Is Direct Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phoenix_Is_Exclude_Contract__c</fullName>
        <defaultValue>false</defaultValue>
        <description>It is used exclude particular contracts while selecting contracts</description>
        <inlineHelpText>If checked this contract will not be available for selection show when creating Bids</inlineHelpText>
        <label>Exclude in Bids</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phoenix_Is_Exclusion_Contract__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This field is used for calculating Lowest Price / SKU</inlineHelpText>
        <label>Is Exclusion Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phoenix_Is_Govt_Customer__c</fullName>
        <formula>Phoenix_Customer__r.Phoenix_Is_Govt_Customer__c</formula>
        <label>Is Govt Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phoenix_Is_IPA_Contract__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is IPA Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phoenix_Is_Manual_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Manual Override?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phoenix_Is_RCA_Contract__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is RCA Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phoenix_NPR_Customer_Code__c</fullName>
        <label>NPR Customer Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_NPR_Customer_Name__c</fullName>
        <label>NPR Customer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Activated</fullName>
                </value>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>In Approval Process</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Terms_Matrix__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Terms Matrix</label>
        <referenceTo>Phoenix_Terms_Matrix__c</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_Type_of_Change__c</fullName>
        <label>Type of Change</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Product Addition</fullName>
                </value>
                <value>
                    <fullName>Price Change</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reference_ID__c</fullName>
        <label>Reference ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Vision_Is_Cus_Prd_Tracker_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This Field will be checked when Customer Product Tracker record is created</description>
        <label>Is Customer Product Tracker Created</label>
        <type>Checkbox</type>
    </fields>
    <label>Contract</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Phoenix_Contract_Number__c</columns>
        <columns>Phoenix_Terms_Matrix__c</columns>
        <columns>Phoenix_Customer__c</columns>
        <columns>Phoenix_NPR_Customer_Code__c</columns>
        <columns>Phoenix_Is_IPA_Contract__c</columns>
        <columns>Phoenix_Is_RCA_Contract__c</columns>
        <columns>Phoenix_Contract_Internal_Description__c</columns>
        <columns>Phoenix_Contract_Status__c</columns>
        <columns>Phoenix_NPR_Customer_Name__c</columns>
        <columns>Phoenix_Contract_External_Description__c</columns>
        <columns>Phoenix_Contract_Start_Date__c</columns>
        <columns>Phoenix_Contract_End_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Exclusion_Contracts</fullName>
        <columns>NAME</columns>
        <columns>Phoenix_Contract_Number__c</columns>
        <columns>Phoenix_Contract_Status__c</columns>
        <columns>Phoenix_Customer__c</columns>
        <columns>Phoenix_Is_Exclusion_Contract__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Phoenix_Is_Exclusion_Contract__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Exclusion Contracts</label>
    </listViews>
    <listViews>
        <fullName>IPA_Contracts</fullName>
        <columns>NAME</columns>
        <columns>Phoenix_Is_IPA_Contract__c</columns>
        <columns>Phoenix_Customer__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Phoenix_Contract_External_Description__c</columns>
        <columns>Phoenix_Contract_Internal_Description__c</columns>
        <columns>Phoenix_Contract_Number__c</columns>
        <columns>Phoenix_Contract_Status__c</columns>
        <columns>Phoenix_Customer_Number__c</columns>
        <columns>Phoenix_Contract_Start_Date__c</columns>
        <columns>Phoenix_Contract_End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Phoenix_Is_IPA_Contract__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>IPA Contracts</label>
    </listViews>
    <listViews>
        <fullName>RCA_Contracts</fullName>
        <columns>NAME</columns>
        <columns>Phoenix_Contract_Number__c</columns>
        <columns>Phoenix_Is_RCA_Contract__c</columns>
        <columns>Phoenix_Contract_Status__c</columns>
        <columns>Phoenix_Contract_Internal_Description__c</columns>
        <columns>Phoenix_Contract_External_Description__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Phoenix_Customer__c</columns>
        <columns>Phoenix_Contract_Start_Date__c</columns>
        <columns>Phoenix_Contract_End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Phoenix_Contract_Internal_Description__c</field>
            <operation>contains</operation>
            <value>RCA</value>
        </filters>
        <label>RCA Contracts</label>
    </listViews>
    <nameField>
        <label>Contract Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contracts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>